<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LayoutFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity"
        tools:layout_editor_absoluteX="-93dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/textTipo"
            android:layout_width="220dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="100dp"
            android:text="@string/TIPOObjeto"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="100dp"
            android:text="TIPO"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            tools:text="TIPO" />

        <TextView
            android:id="@+id/textTarifa"
            android:layout_width="220dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="144dp"
            android:text="@string/TarifaObjeto"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="148dp"
            android:text="TARIFA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="366dp"
            android:layout_height="120dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_mapa" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="52dp"
            android:text="ZONA"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            tools:text="Zona" />

        <TextView
            android:id="@+id/textZonat"
            android:layout_width="220dp"
            android:layout_height="28dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="52dp"
            android:text="@string/ZonaObjeto"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="204dp"
            android:text="@string/PESOObjeto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <TextView
            android:id="@+id/textPeso"
            android:layout_width="220dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="200dp"
            android:text="@string/PESOObjeto"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="256dp"
            android:text="Peso"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <TextView
            android:id="@+id/textPrecio"
            android:layout_width="220dp"
            android:layout_height="25dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="256dp"
            android:text="@string/PRECIOObjeto"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <Button
            android:id="@+id/btnAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onclick"
            android:text="Atras"
            app:layout_constraintBottom_toTopOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>